Added paper and some evaluation changes

--- a/resources/results/latex/bleu_template.tex
+++ b/resources/results/latex/bleu_template.tex
@@ -1,11 +1,9 @@
-\begin{table}[|ht]
+\begin{table}[!t]
 \centering
 \begin{tabular}{@{}l|l|l|l|l|l@{}}
-\textbf{} & \textbf{Captioning} & \textbf{BERT} & \textbf{GPT-2} & \textbf{VQA-Baseline} & \textbf{VGGPT-2} \\ \midrule
-\textbf{BLEU-1} & #captioning1 & #bert1 & #gpt21 & #vqa_baseline1 & #vggpt21 \\
-\textbf{BLEU-2} & #captioning2 & #bert2 & #gpt22 & #vqa_baseline2 & #vggpt22 \\
-\textbf{BLEU-3} & #captioning1 & #bert3 & #gpt23 & #vqa_baseline3 & #vggpt23 \\
-\textbf{BLEU-4} & #captioning4 & #bert4 & #gpt24 & #vqa_baseline4 & #vggpt24 \\ \bottomrule
+\textbf{} & \textbf{BLEU-1} & \textbf{BLEU-2} & \textbf{BLEU-3} & \textbf{BLEU-4} \\ \midrule
+#ROWS
+\bottomrule
 \end{tabular}
 \caption{BLEU scores using #SMOOTH smoothing function.}
 \label{tab::bleu-#SMOOTH}
